--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,5 @@
-require "sinatra"
-
 <% if @name  %>
 	<h1> Hola <%= @name %> <h1>
 <% else %>
-	<h1> Hola Mundo <h1>
+	<h1> Hola desconocido <h1>
 <% end %>
